<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/mnuRefreshAll"
        android:title="@string/mnuRefreshAll"
        android:icon="@drawable/refresh"
        android:showAsAction="ifRoom"
        android:orderInCategory="0"
    />
    
    <item
        android:id="@+id/mnuAddPerson"
        android:title="@string/btnAdd"
        android:icon="@drawable/add_16x16"
        android:showAsAction="never"
        android:orderInCategory="1"
    />
    
    <item
        android:id="@+id/mnuSettings"
        android:title="@string/mnuSettings"
        android:icon="@drawable/wrench_orange"
        android:showAsAction="never"
        android:orderInCategory="2"
    />
    
    <item
        android:id="@+id/mnuAbout"
        android:title="@string/mnuAbout"
        android:icon="@drawable/statinfo"
        android:showAsAction="never"
        android:orderInCategory="3"
    />
    
    <item
        android:id="@+id/mnuExit"
        android:title="@string/btnExit"
        android:icon="@drawable/cli_aim"
        android:showAsAction="never"
        android:orderInCategory="4"
    />
    
</menu>