<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    tools:context=".UserGroupSettingsTab">

    <TextView
        android:id="@+id/lblNewGroup"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="2dp"
        android:drawableLeft="@drawable/group"
        android:text="@string/lblGroupName"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/txtGroup"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="2dp"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <ListView
        android:id="@+id/lstAllGroup"
        android:layout_width="match_parent"
        android:layout_height="342dp"
        android:layout_margin="3dp"
        android:layout_weight="0.11" 
        android:choiceMode="singleChoice"
        android:descendantFocusability="beforeDescendants"
        android:overScrollMode="ifContentScrolls" >

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnAddGroup"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="105dp"
            android:layout_height="40dp"
            android:layout_margin="1dp"
            android:drawableLeft="@drawable/add_16x16"
            android:onClick="btnAddGroup_Click"
            android:text="@string/btnAddContact" />

        <Button
            android:id="@+id/btnUpdateGroup"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="106dp"
            android:layout_height="40dp"
            android:layout_marginTop="1dp"
            android:drawableLeft="@drawable/pencil"
            android:onClick="btnUpdateGroup_Click"
            android:text="@string/btnUpd" />

        <Button
            android:id="@+id/btnDeleteGroup"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="105dp"
            android:layout_height="40dp"
            android:layout_margin="1dp"
            android:drawableLeft="@drawable/del_16x16"
            android:onClick="btnDeleteGroup_Click"
            android:text="@string/btnDel" />
    </LinearLayout>

</LinearLayout>