<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AutorizationActivity" 
    android:layout_below="@+id/linearLayout1" >

    <LinearLayout
        style="@color/notepad_paper_even"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/lblLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/status_online"
            android:text="@string/lblLogin"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <EditText
            android:id="@+id/txtLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="text" />
        
        <TextView
            android:id="@+id/lblPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/error"
            android:text="@string/lblPwd"
            android:textAppearance="?android:attr/textAppearanceLarge" />

		<EditText
            android:id="@+id/txtPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textPassword" />
        
        <Button
            android:id="@+id/btnOk"
            style="@color/btn_ok_authorization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/quarantine"
            android:onClick="btnOk_Click"
            android:text="@string/btnText" />

        <Button
            android:id="@+id/btnCancel"
            style="@color/btn_cancel_authorization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/cancel"
            android:onClick="btnCancel_Click"
            android:text="@string/btnCancel" />
        
    </LinearLayout>

</ScrollView>