<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewContactRecordActivity" 
    android:orientation="vertical">
   
        <TextView
            android:id="@+id/lblContactTypeLst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:text="@string/lblContactTypeLst"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ListView
            android:id="@+id/lstContactType"
            android:layout_width="match_parent"
            android:layout_height="325dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:choiceMode="singleChoice"
            android:descendantFocusability="beforeDescendants"
            android:minHeight="325dp"
            android:overScrollMode="ifContentScrolls" >

        </ListView>

        <TextView
            android:id="@+id/lblContactValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:text="@string/lblContactValue"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/txtContactValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:ems="10"
            android:inputType="text"
            android:shadowRadius="2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnAddContactRec"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="2dp"
                android:drawableLeft="@drawable/quarantine"
                android:onClick="btnAddContactRec_Click"
                android:text="@string/btnAddContact" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="2dp"
                android:drawableLeft="@drawable/cancel"
                android:onClick="btnCancel_Click"
                android:text="@string/btnSovsemCancel" />
        </LinearLayout>
</LinearLayout>